Add card image upload functionality
- Install expo-image-picker for image selection
- Add image upload to Supabase Storage
- Update CardPreview to display uploaded images
- Add image upload UI with preview in card designer
- Create migration for image_url column and storage bucket
- Configure expo-image-picker plugin with permissions

--- a/app.json
+++ b/app.json
@@ -32,7 +32,14 @@
     },
     "plugins": [
       "expo-secure-store",
-      "expo-router"
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos to upload card artwork.",
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to take photos for card artwork."
+        }
+      ]
     ]
   }
 }
