Fix Vercel deployment config and TypeScript errors
- Add vercel.json with proper Expo Router web build configuration
- Add build:web script to package.json
- Update app.json with web output configuration
- Fix TypeScript errors in shop.tsx with proper type assertions
- Update .gitignore to exclude swap files and Vercel directory
- Complete gaming board redesign with 4:3 responsive layout

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ dist/
 web-build/
 expo-env.d.ts
 
+# Vercel
+.vercel
+
 # Native
 .kotlin/
 *.orig.*
@@ -36,6 +39,10 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# Swap files
+*.swp
+*~
 
 # generated native folders
 /ios
