--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  // Vercel configuration for Expo Router web deployment
   "buildCommand": "npm run build:web",
   "outputDirectory": "dist",
   "devCommand": "npm run web",
