--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@solana/spl-token": "^0.4.14",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.89.0",
+    "@vercel/node": "^5.5.16",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-image-picker": "~17.0.10",
