--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "buildCommand": "npm run build:web",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist",
+  "framework": null,
   "rewrites": [
     {
       "source": "/api/(.*)",
